# julax

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/instructions/: *.instructions.md
.github/workflows/: docker-build.yml  docker.yml
01_jax_basics/: main.py
02_mnist/: v1.py  v2.py  v3.py  v4.py  v6.py
03_nanogpt/: v1.py
docs/: logo.jl
docs/scripts/: tree_scope.ipynb
examples/: 01_mnist.py  02_mini_transformer.py  03_Llama_3.2_1B.py
examples/01_mnist/: main.py  pyproject.toml
examples/02_mini_transformer/: pyproject.toml
examples/03_Llama_3/: README.md  convert.py  dataset.py  model.py  pyproject.toml  training.py
examples/03_Llama_3.2_1B/: main.py  pyproject.toml
examples/04_nanochat/: dataset.py
experiments/: 01_mnist.py  02_mini_transformer.py  03_Llama_3.2_1B.py  03_nano_gpt_shakespeare_char.py  mini_transformer.py  mnist.py  transformer.py
scripts/: checkpointing.py  config.yaml  debug.py  jax_array.py  json_arg_parse.py  plum.py  tree_scope.ipynb
src/julax/: __init__.py  base.py  core.py  experiment.py  inputs.py  layers.py  observers.py  utils.py
src/julax/experiment/: __init__.py  experiment.py  observers.py  run.py
src/julax/layers/: base.py  connectors.py  core.py
tests/: test_einops.py  test_inputs.py  test_layers_init.py
