[project]
name = "julax"
version = "0.1.0-dev"
description = "Just Layers over JAX"
readme = "README.md"
authors = [
    { name = "Jun Tian", email = "tianjun.cpp@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "einops>=0.8.1",
    "jax>=0.7.2",
    "optax>=0.2.6",
    "plum-dispatch>=2.5.8",
    "pydantic>=2.12.0",
]

[project.scripts]
julax = "julax:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
]

[tool.ruff.lint]
ignore = ["F811"]

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true
